slurm-1230.out
  File "/home/rice/jmc32/DNN_for_Pt_Assignment-master/DNN_Hyperparameters/GPU_Check.py", line 3
    print "VERSION", tf.__version__sess = tf.Session(config=tf.ConfigProto(log_device_placement=True)) 
                                        ^
SyntaxError: invalid syntax
Using Theano backend.
WARNING (theano.configdefaults): install mkl with `conda install mkl-service`: No module named mkl
/home/rice/jmc32/anaconda2/envs/tensorflow/lib/python2.7/site-packages/keras/models.py:942: UserWarning: The `nb_epoch` argument in `fit` has been renamed `epochs`.
  warnings.warn('The `nb_epoch` argument in `fit` '
Seed value is 44
MaxAbs



AUC: 0.935677
Done
('True negative total is ', 40290, 'out of', 100000)
('True positive total is ', 53444)
('False negative total is ', 2883)
('False positive total is ', 3383)
('Any missed ones? ', 0)
